# multi-lang-coverage-demo

./: .gitignore  index.html  package-lock.json  package.json  sonar-project.properties  tsconfig.json  vite.config.ts
.github/workflows/: deploy-pages.yml
java-app-1/: pom.xml
java-app-1/src/main/java/com/example/demo/: GreetingService.java
java-app-1/src/test/java/com/example/demo/: GreetingService.java
public/: coverage-summary.json
python-app-1/: .coverage  coverage.json  pyproject.toml
python-app-1/src/app/: math_utils.py
python-app-1/tests/: test_math_utils.py
react-app-1/: index.html  jest.config.cjs  package-lock.json  package.json  tsconfig.json  vite.config.ts
react-app-1/coverage/: coverage-summary.json  lcov.info
react-app-1/coverage/lcov-report/: App.tsx.html  ProjectCoverageCard.tsx.html  index.html
react-app-1/src/: App.test.tsx  App.tsx  ProjectCoverageCard.tsx  main.tsx
react-app-2/: package.json
src/: App.tsx  types.ts
src/components/: MarkdownView.tsx  ProjectCoverageCard.tsx  XMLView.tsx
src/config/: projects.ts
src/utils/: jacoco.ts  python.ts
