[project]
name = "python-coverage-demo"
version = "0.1.0"
description = "Demo Python project for coverage dashboard"
requires-python = ">=3.9"

dependencies = []

[project.optional-dependencies]
dev = [
  "pytest",
  "coverage",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = [
  "tests",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.coverage.json]
output = "coverage.json"
pretty_print = true
